# dses-interferometer-controller

./: .gitignore  LICENSE  README.md
Firmware/: .TB67H303.py.swp  .motor-test.py.swp  TB67H303.py  controller.py  data3_100_dir0_time.txt  imu-test.py  led-test.py  motor-test.py  stream_data.py  stream_imu.py  stream_pot.py  test_sinusoids.py
Firmware/controllers/: pi_basic.py  pi_limited.py  trapezoidal.py
Firmware/data_acq/: stream_data.py  stream_imu.py
Firmware/drivers/: LSM6DSO32.py  TB67H303.py  set_lnb.sh
Firmware/kernel/: Makefile  as5048.c  as5048.h  dses-if-overlay.dts  lsm6ds032.c  lsm6ds032.h  tb67h303.c  test  test.c
Firmware/python/: LSM6DSO32.py  controller-demo.py  imu-test.py
Firmware/rpi/: as5048.c  lsm6ds032-overlay.dts  lsm6ds032.c  tb67h303.c
Firmware/tests/: imu-test.py  laundry_demo.py  led-test.py  motor-test.py  test_sinusoids.py
Hardware/: interferometer-rf-notes.txt
Hardware/bias-t/: bias-t.kicad_pcb  bias-t.kicad_pro  bias-t.kicad_sch
Hardware/dish-controller/: #auto_saved_files#  dish-controller.kicad_pcb  dish-controller.kicad_prl  dish-controller.kicad_pro  dish-controller.kicad_sch  fp-info-cache  level-shift.kicad_sch
Hardware/elevation-imu/: elevation-imu.kicad_pcb  elevation-imu.kicad_pro  elevation-imu.kicad_sch  fp-lib-table
Hardware/encoder/: #auto_saved_files#  encoder.kicad_pcb  encoder.kicad_pro  encoder.kicad_sch  (+1 more)
Simulation/: Interferometer Analysis Example.ipynb
Software/imu_client/: CMakeLists.txt  imu_client.cpp  imu_client.hpp.in
sim/: Interferometer Analysis Example.ipynb
sw/user/comm/: CMakeLists.txt
sw/user/comm/src/: if_client.cpp
sw/user/if_client/: CMakeLists.txt  if_client.cpp
(+138 files in other folders)
